Implementing basic MVVM

--- a/XamarinUI/XamarinUI/XamarinUI/XamarinUI.csproj
+++ b/XamarinUI/XamarinUI/XamarinUI/XamarinUI.csproj
@@ -33,6 +33,9 @@
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\MVVM\BasicMVVM.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\CollectionView\OnlineFriendsList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
